Bug 179049 - Selecting a folder by typing its initial letter doesn't scroll the view to the folder
Summary: Selecting a folder by typing its initial letter doesn't scroll the view to th...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 179567 179744 448049 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-29 14:44 UTC by Arne Babenhauserheide
Modified: 2022-01-07 12:05 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Arne Babenhauserheide 2008-12-29 14:44:15 UTC
Version:           1.1 (using 4.1.3 (KDE 4.1.3), Gentoo)
Compiler:          x86_64-pc-linux-gnu-gcc
OS:                Linux (x86_64) release 2.6.25-gentoo-r7

It doesn't scroll to the folder the first time I hit the letter, so I don't see which folder got selected. 

When I hit the letter a second time, it scrolls the view, but also jumps to the second candidate for this letter. 

This is a minor glitch, but it's kinda annoying... 

But since I didn't sasy it for a far too long time: Using Dolphin is a great experience! Thank you very much for writing it!
Comment 1 FiNeX 2008-12-29 14:57:54 UTC
using r902024, I've found two different behaviour:

1) if one icon is already selected and you type the first chars of an icon which is outside the current view, dolphin select the new icon and it scrolls to the right icon.

2) if no icon are selected, the new icon is selected, but dolphin doesn't scroll.
Comment 2 FiNeX 2009-01-04 13:49:20 UTC
*** Bug 179567 has been marked as a duplicate of this bug. ***
Comment 3 FiNeX 2009-01-04 13:50:08 UTC
Like it has been described on bug #179567, pressing the first char twice will scroll the view.
Comment 4 Peter Penz 2009-01-04 19:48:04 UTC
@FiNeX: I tried to reproduce your behavior from comment #1 on trunk but don't get an issue for point 2 (-> scrolling works, I'm using r905633).

I tried to reproduce it in the icons view and the details view, no item has been selected and I pressed a letter from an invisible item. Could you give me a hint what I'm doing wrong? Thanks!
Comment 5 FiNeX 2009-01-04 23:57:46 UTC
I'm using r905373 with Qt 4.4.3.

1) start dolphin (when you start it, it should be selected any file)
2) switch to icon view (if not yet active)
3) resize the window in order to have the vertical scrollbar
4) click between two icons to be sure that no file are selected
5) click on the small green "+" on the first file (so you've only one file selected)
6) type the first char of a hidden icon

If the first char identify univocally a file, the file will selected (you can read it on the status bar) but the view doesn't scroll. If the first char is shared by more filenames, pressing twice it will select the second file (of all the files which starts with it) and the view will be scrolled.
Comment 6 Peter Penz 2009-01-05 19:11:39 UTC
Thanks I could reproduce the issue. I was not aware that the issue only occurs if one item is selected (in comment #2 I interpreted the description of the issue the other way).
Comment 7 Peter Penz 2009-01-05 19:21:36 UTC
SVN commit 906179 by ppenz:

QAbstractItemView::scrollTo() may get called by QListView::keyPressEvent(), so m_enableScrollTo (which is checked in DolphinIconsView::scrollTo()) must be enabled before. This fixes the issue that the autoscrolling does not work if exactly one item is selected and an invisible item should get focused because of a key press.

BUG: 179049

 M  +1 -1      dolphiniconsview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=906179
Comment 8 FiNeX 2009-01-05 19:32:18 UTC
The fix is perfect, thanks Peter!
Comment 9 Dario Andres 2009-01-05 22:00:26 UTC
*** Bug 179744 has been marked as a duplicate of this bug. ***
Comment 10 Arne Babenhauserheide 2009-01-06 13:30:05 UTC
Thank you very much for the fast fix, Peter! 
Comment 11 count 2022-01-07 12:05:31 UTC
*** Bug 448049 has been marked as a duplicate of this bug. ***