QAbstractItemView::scrollTo() may get called by QListView::keyPressEvent(), so m_enableScrollTo (which is checked in DolphinIconsView::scrollTo()) must be enabled before. This fixes the issue that the autoscrolling does not work if exactly one item is selected and an invisible item should get focused because of a key press.

BUG: 179049

svn path=/trunk/KDE/kdebase/apps/; revision=906179